--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ObstacleRaceTask2</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="score_0">Score: 0</string>
 </resources>
